src/Services.css
.buttons-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  max-width:  900px;
  margin: 0 auto;
  padding: 100px 10%;
}  
.serviceBtn {
  position: relative;
  /* height:  150px; */
  width: 24%;
  /* margin: 100px; */

}
 
.button-container {
  position: relative;
  text-align: center;
  padding: 0;
  border-radius:50%; 
  overflow:hidden; 
  cursor: pointer;
  /* height:  150px; */
  width: 100%;
}  
  
.button-container p {
    transition: all 1s ease-out;
    background: rgba(88, 88, 88, 0.7);
    border-radius:50%; 
    color: #FFFFFF;
    position:absolute;
    font-size: 65%; 
    font-weight: 700; 
    top: 0;
    left:0;
    right:0;
    bottom:0;
    padding-top: 40%;
    width: 100%;
    height:  100%;
    text-decoration: none;
    text-transform:uppercase;
}
  
.button-container p:hover {
    background: none;
    border: none; 
    opacity:0;
}
.button-container img{
  width: 100%; 
  height: 100%; 
}

  
@media only screen and (max-width: 600px) {
  .buttons-wrapper {
    padding:20px 10%;
  }
  .serviceBtn{
    height: 33%;
    padding: 0;
    margin: 0;
  }
   
  #coloringBtn {
    margin-top: 20vh;
  }    
  #smoothingBtn {
    margin-top: 40vh;
  } 
}

